--- a/about.html
+++ b/about.html
@@ -12,7 +12,7 @@
 
   <body>
 
-    <header class="header scam">
+    <header class="header">
       <div class="container">
         <div class="header_block">
           <a class="header_block_logo" href="#">
@@ -39,7 +39,7 @@
             <li>
               <a href="#">Главная</a>
             </li>
-            <li>
+            <li class="current_page_item">
               <a href="#">О нас</a>
             </li>
             <li>
@@ -51,7 +51,7 @@
             <li>
               <a href="#">Новости</a>
             </li>
-            <li class="current_page_item">
+            <li>
               <a href="#">Внимание, мошенники</a>
             </li>
             <li>
@@ -139,20 +139,20 @@
       </div>
     </header>
 
-    <section class="warning">
+    <section class="about">
       <div class="container">
-        <div class="warning_block">
-          <div class="warning_block_left">
-            <p class="bold">Внимание! Мы обращаем ваше внимание на то, что некоторые нечестные лица могут пытаться продавать или распространять лицензии на наш мультфильм «Джинглики» без нашего ведома и согласия.</p>
-            <p>Мы хотим подчеркнуть, что все права на мультсериал «Джинглики», включая авторские права, принадлежат нам, и любое использование или распространение контента без нашего разрешения является нарушением законодательства об авторских правах.</p>
-            <p>Пожалуйста, будьте бдительны и остерегайтесь мошенников, которые могут предлагать вам приобрести или использовать контент «Джингликов» без соответствующих правовых документов.</p>
-            <p>Если у вас есть подозрения на незаконное использование нашего контента или если вы столкнулись с подобными случаями, пожалуйста, немедленно сообщите нам об этом. Мы ценим вашу помощь в обеспечении защиты наших прав и контента.</p>
-            <p>Благодарим вас за внимание к этому вопросу и за вашу поддержку!</p>
+        <div class="about_block">
+          <div class="about_block_left">
+            <h1>О нас</h1>
+            <p class="subtitle">«Джинглики» – месте, где рождаются чудеса и волшебство становится частью каждого дня! Мы – команда талантливых аниматоров и сценаристов, стоящая за этим захватывающим проектом, который призван вдохновлять и развлекать детей всего мира.</p>
+            <p>«Джинглики» – это не просто мультфильм, это увлекательное путешествие в мир фантазии и дружбы. Наши герои – это яркие и неповторимые персонажи, каждый из которых несет свою уникальную историю и учит важным жизненным урокам. Серии мультфильма наполнены приключениями, загадками и добрым юмором, созданными специально для того, чтобы увлечь и вдохновить маленьких зрителей.</p>
+            <p>Мы стремимся не только развлекать, но и воспитывать. В каждой серии «Джингликов» заложены ценности дружбы, справедливости, и заботы о нашей планете. Мы верим, что дети – это будущее, и наша задача помочь им стать сильными, добрыми и уверенными в себе личностями.</p>
+            <p class="bold">Присоединяйтесь к нашему захватывающему путешествию в мир «Джингликов»! Подписывайтесь на наши соц сети, следите за новыми сериями и окунитесь в мир волшебства вместе с нами!</p>
           </div>
-          <div class="warning_block_right">
-            <img class="warning_block_right_one js-mousemove" data-layer="-1" src="img/warning/1.webp" alt="">
-            <img class="warning_block_right_two js-mousemove" data-layer="10" src="img/warning/cloud.webp" alt="">
-            <img class="warning_block_right_three js-mousemove" data-layer="1" src="img/warning/znak.webp" alt="">
+          <div class="about_block_right">
+            <img class="about_block_right_one js-mousemove" data-layer="1" src="img/about/1.webp" alt="">
+            <img class="about_block_right_two js-mousemove" data-layer="-1" src="img/about/2.webp" alt="">
+            <img class="about_block_right_three js-mousemove" data-layer="-5" src="img/about/cloud.webp" alt="">
           </div>
         </div>
       </div>
