--- a/creators.html
+++ b/creators.html
@@ -12,7 +12,7 @@
 
   <body>
 
-    <header class="header scam">
+    <header class="header">
       <div class="container">
         <div class="header_block">
           <a class="header_block_logo" href="#">
@@ -42,7 +42,7 @@
             <li>
               <a href="#">О нас</a>
             </li>
-            <li>
+            <li class="current_page_item">
               <a href="#">Создатели</a>
             </li>
             <li>
@@ -51,7 +51,7 @@
             <li>
               <a href="#">Новости</a>
             </li>
-            <li class="current_page_item">
+            <li>
               <a href="#">Внимание, мошенники</a>
             </li>
             <li>
@@ -139,20 +139,45 @@
       </div>
     </header>
 
-    <section class="warning">
+    <section class="creators">
       <div class="container">
-        <div class="warning_block">
-          <div class="warning_block_left">
-            <p class="bold">Внимание! Мы обращаем ваше внимание на то, что некоторые нечестные лица могут пытаться продавать или распространять лицензии на наш мультфильм «Джинглики» без нашего ведома и согласия.</p>
-            <p>Мы хотим подчеркнуть, что все права на мультсериал «Джинглики», включая авторские права, принадлежат нам, и любое использование или распространение контента без нашего разрешения является нарушением законодательства об авторских правах.</p>
-            <p>Пожалуйста, будьте бдительны и остерегайтесь мошенников, которые могут предлагать вам приобрести или использовать контент «Джингликов» без соответствующих правовых документов.</p>
-            <p>Если у вас есть подозрения на незаконное использование нашего контента или если вы столкнулись с подобными случаями, пожалуйста, немедленно сообщите нам об этом. Мы ценим вашу помощь в обеспечении защиты наших прав и контента.</p>
-            <p>Благодарим вас за внимание к этому вопросу и за вашу поддержку!</p>
+        <div class="creators_block">
+          <div class="creators_block_left">
+            <div class="creators_block_left_item">
+              <p class="bold">Создателем мультфильма популярный российский писатель Олег Рой, сценарист, блогер, продюсер, теле- и радиоведущий, общественный деятель.</p>
+              <ul>
+                <li>Награжден медалью ордена «За заслуги перед отечеством» 2 степени.</li>
+                <li>Топ-100 лидеров общественного мнения России.</li>
+                <li>Член союза писателей России.</li>
+                <li>Член правления Ассоциации анимационного кино.</li>
+                <li>Член Художественного совета Министерства обороны.</li>
+                <li>Член Общественного совета при Министерстве просвещения Российской Федерации.</li>
+                <li>Член Российского книжного союза.</li>
+              </ul>
+              <p>По данным Российской книжной палаты входит в топ лидеров в России среди авторов взрослой художественной литературы по суммарному годовому тиражу изданных книг, наиболее издаваемый в России автор детской литературы. Автор 80 романов различных жанров (психологический роман, сентиментальный роман, фантастика, мистика, триллер, нон-фикшн и др.) и Автор 250 книг для детей и подростков. Топовый автор крупнейших издательств России «Эксмо», «Аст», «Вече», «Рипол классик» и др. Книги Олега Роя изданы миллионными тиражами, переведены на многие иностранные языки. Постоянный участник всех российских и международных книжных выставок. Входит в десятку самых читаемых писателей России.</p>
+            </div>
+            <div class="creators_block_left_item">
+              <p>Автор и создатель популярных в России и за рубежом анимационных сериалов «Джинглики», «Дракоша Тоша», «Шмяк. Волшебная лавка Есении», «Супер МЯУ», «Мульти-Сити», «Семейка Космо». Постоянный участник творческой группы, работающей над успешным отечественным литературно-анимационным проектом «Сказочный патруль».</p>
+              <h5>Анимационные проекты</h5>
+              <h5>Супер мяу</h5>
+              <ul class="second">
+                <li>Chicago Indie Film Awards</li>
+                <li>Победитель в номинации «Лучший TV-сериал» DIEGO</li>
+              </ul>
+              <h5>Вошел в конкурсные программы:</h5>
+              <ul class="second">
+                <li>19-ГО МЕЖДУНАРОДНОГО ФЕСТИВАЛЯ ФИЛЬМОВ ДЛЯ ДЕТЕЙ В САН-ДИЕГО</li>
+                <li>Ajayu International Animation Festival в Перу</li>
+                <li>Фестиваль Golden Kuker в Болгарии</li>
+                <li>Фестиваль Russian Film Festival в Казахстане</li>
+              </ul>
+            </div>
           </div>
-          <div class="warning_block_right">
-            <img class="warning_block_right_one js-mousemove" data-layer="-1" src="img/warning/1.webp" alt="">
-            <img class="warning_block_right_two js-mousemove" data-layer="10" src="img/warning/cloud.webp" alt="">
-            <img class="warning_block_right_three js-mousemove" data-layer="1" src="img/warning/znak.webp" alt="">
+          <div class="creators_block_right">
+            <img class="creators_block_right_logo" src="img/creators/logo.svg" alt="">
+            <img class="creators_block_right_one js-mousemove" data-layer="1" src="img/creators/home-cockroach.webp" alt="">
+            <img class="creators_block_right_two js-mousemove" data-layer="1" src="img/awards/clouds_2.png" alt="">
+            <img class="creators_block_right_three js-mousemove" data-layer="-1" src="img/awards/clouds_1.png" alt="">
           </div>
         </div>
       </div>
