--- a/index.html
+++ b/index.html
@@ -139,6 +139,116 @@
       </div>
     </header>
 
+    <main class="home">
+      <img class="home_one js-mousemove" data-layer="-1" src="img/awards/clouds_1.png" alt="">
+      <img class="home_two js-mousemove" data-layer="1" src="img/awards/clouds_2.png" alt="">
+      <div class="home__jingliki container">
+				<div class="home__cockroach">
+					<img class="js-mousemove" data-layer="-6" src="img/main/home-cockroach.png" alt="Таракан">
+				</div>
+				<div class="home__fedunya">
+					<img class="js-mousemove" data-layer="-5" src="img/main/home-fedunya.png" alt="Федюня">
+				</div>
+				<div class="home__kotya">
+					<img class="js-mousemove" data-layer="-3" src="img/main/home-kotya.png" alt="Котя">
+				</div>
+				<div class="home__pankrat">
+					<img class="js-mousemove" data-layer="-4" src="img/main/home-pankrat.png" alt="Панкрат">
+				</div>
+				<div class="home__frosya">
+					<img class="js-mousemove" data-layer="5" src="img/main/home-frosya.png" alt="Фрося">
+				</div>
+				<div class="home__denek">
+					<img class="js-mousemove" data-layer="3" src="img/main/home-denek.png" alt="Денёк">
+				</div>
+				<div class="home__vanya">
+					<img class="js-mousemove" data-layer="1" src="img/main/home-vanya.png" alt="Ваня">
+				</div>
+				<div class="home__manunja">
+					<img class="js-mousemove" data-layer="3" src="img/main/home-manunja.png" alt="Манюня">
+				</div>
+				<div class="home__bedacur">
+					<img class="js-mousemove" data-layer="1" src="img/main/home-bedacur.png" alt="Бедакур">
+				</div>
+			</div>
+    </main>
+
+    <section class="about_home">
+      <div class="container">
+        <div class="about_home_block">
+          <div class="about_home_block_left">
+            <div class="about_home_block_left_title">
+              <h2 class="title_h2">О нас</h2>
+              <a href="#" class="btn">Подробнее</a>
+            </div>
+            <p>Мы – команда творческих профессионалов, вдохновленных желанием создать увлекательный и познавательный мир для детей всех возрастов.</p>
+            <p>«Джинглики» – это не просто мультфильм, это волшебное приключение, где каждая серия наполнена веселыми персонажами, захватывающими приключениями и важными уроками жизни. Наша цель – не только развлекать, но и вдохновлять маленьких зрителей, учить их дружбе, толерантности, и важности заботы о нашей планете.</p>
+            <p>Каждый персонаж мультсериала «Джинглики» уникален и запоминающийся, и каждая серия наполнена яркими красками и музыкой, чтобы дети могли погрузиться в мир волшебства и фантазии.</p>
+            <p>Наша команда работает с любовью и творческим вдохновением, чтобы каждая серия "Джингликов" приносила радость и положительные эмоции нашим маленьким зрителям.</p>
+          </div>
+          <div class="about_home_block_right">
+            <img class="about_home_block_right_one js-mousemove" data-layer="1" src="img/about/1.webp" alt="">
+            <img class="about_home_block_right_two js-mousemove" data-layer="-1" src="img/about/2.webp" alt="">
+            <img class="about_home_block_right_three js-mousemove" data-layer="-5" src="img/about/cloud.webp" alt="">
+          </div>
+        </div>
+        <a href="#" class="btn mob">Подробнее</a>
+      </div>
+    </section>
+
+    <section class="creators_home">
+      <img class="creators_home_back" src="img/creators/back.svg" alt="">
+      <div class="container">
+        <div class="creators_home_block">
+          <div class="creators_home_block_left">
+            <div class="creators_home_block_left_title">
+              <h2 class="title_h2">Создатели</h2>
+              <a href="#" class="creators_home_block_left_title_btn">Подробнее</a>
+            </div>
+            <p class="bold">Создателем мультфильма популярный российский писатель Олег Рой, сценарист, блогер, продюсер, теле- и радиоведущий, общественный деятель.</p>
+            <ul>
+              <li>Награжден медалью ордена «За заслуги перед отечеством» 2 степени.</li>
+              <li>Топ-100 лидеров общественного мнения России.</li>
+              <li>Член союза писателей России.</li>
+              <li>Член правления Ассоциации анимационного кино.</li>
+              <li>Член Художественного совета Министерства обороны.</li>
+              <li>Член Общественного совета при Министерстве просвещения Российской Федерации.</li>
+              <li>Член Российского книжного союза.</li>
+            </ul>
+            <p>По данным Российской книжной палаты входит в топ лидеров в России среди авторов взрослой художественной литературы по суммарному годовому тиражу изданных книг, наиболее издаваемый в России автор детской литературы. Автор 80 романов различных жанров (психологический роман, сентиментальный роман, фантастика, мистика, триллер, нон-фикшн и др.) и Автор 250 книг для детей и подростков. Топовый автор крупнейших издательств России «Эксмо», «Аст», «Вече», «Рипол классик» и др. </p>
+            <a href="#" class="creators_home_block_left_mob_btn">Подробнее</a>
+          </div>
+          <div class="creators_home_block_right">
+            <img class="creators_home_block_right_logo" src="img/creators/logo.svg" alt="">
+            <img class="creators_home_block_right_one js-mousemove" data-layer="1" src="img/creators/home-cockroach.webp" alt="">
+            <img class="creators_home_block_right_two js-mousemove" data-layer="1" src="img/awards/clouds_2.png" alt="">
+            <img class="creators_home_block_right_three js-mousemove" data-layer="-1" src="img/awards/clouds_1.png" alt="">
+          </div>
+        </div>
+      </div>
+    </section>
+
+    <section class="partners_home">
+      <div class="container">
+        <div class="partners_home_block">
+          <div class="partners_home_block_left">
+            <div class="partners_home_block_left_title">
+              <h2 class="title_h2">Партнерам</h2>
+              <a href="#" class="btn">Подробнее</a>
+            </div>
+            <p>Мы заинтересованы в сотрудничестве со стриминговыми сервисами для распространения нашего контента и деления радости «Джингликов» с максимальным количеством зрителей.</p>
+            <p>Талантливые художники и аниматоры всегда приветствуются в нашей команде! Если у вас есть идеи или навыки, которые могут дополнить или обогатить наш контент, мы с удовольствием рассмотрим возможность сотрудничества.</p>
+            <p>Мы открыты к любым предложениям о партнерстве и сотрудничестве. Вместе мы можем создавать что-то по-настоящему удивительное и вдохновляющее для детей и их родителей.</p>
+          </div>
+          <div class="partners_home_block_right">
+            <img class="partners_home_block_right_main js-mousemove" data-layer="-1" src="img/partners/1.png" alt="">
+            <img class="partners_home_block_right_cloud js-mousemove" data-layer="1" src="img/partners/cloud.png" alt="">
+          </div>
+          <a href="#" class="btn mob">Подробнее</a>
+        </div>
+      </div>
+    </section>
+
     <section class="news">
       <div class="container">
         <div class="news_title">
