--- a/single.html
+++ b/single.html
@@ -12,7 +12,7 @@
 
   <body>
 
-    <header class="header scam">
+    <header class="header">
       <div class="container">
         <div class="header_block">
           <a class="header_block_logo" href="#">
@@ -48,10 +48,10 @@
             <li>
               <a href="#">Партнёрам</a>
             </li>
-            <li>
+            <li class="current_page_item">
               <a href="#">Новости</a>
             </li>
-            <li class="current_page_item">
+            <li>
               <a href="#">Внимание, мошенники</a>
             </li>
             <li>
@@ -139,22 +139,18 @@
       </div>
     </header>
 
-    <section class="warning">
+    <section class="single_main">
+      <a href="#" class="single_main_back">
+        <span>Назад</span>
+      </a>
+      <img src="img/single/bg.webp" alt="">
+      <h1>Длинный заголовок новости номер один</h1>
+      <p><b>24 апреля</b> 2024 в 15:34</p>
+    </section>
+
+    <section class="single_content">
       <div class="container">
-        <div class="warning_block">
-          <div class="warning_block_left">
-            <p class="bold">Внимание! Мы обращаем ваше внимание на то, что некоторые нечестные лица могут пытаться продавать или распространять лицензии на наш мультфильм «Джинглики» без нашего ведома и согласия.</p>
-            <p>Мы хотим подчеркнуть, что все права на мультсериал «Джинглики», включая авторские права, принадлежат нам, и любое использование или распространение контента без нашего разрешения является нарушением законодательства об авторских правах.</p>
-            <p>Пожалуйста, будьте бдительны и остерегайтесь мошенников, которые могут предлагать вам приобрести или использовать контент «Джингликов» без соответствующих правовых документов.</p>
-            <p>Если у вас есть подозрения на незаконное использование нашего контента или если вы столкнулись с подобными случаями, пожалуйста, немедленно сообщите нам об этом. Мы ценим вашу помощь в обеспечении защиты наших прав и контента.</p>
-            <p>Благодарим вас за внимание к этому вопросу и за вашу поддержку!</p>
-          </div>
-          <div class="warning_block_right">
-            <img class="warning_block_right_one js-mousemove" data-layer="-1" src="img/warning/1.webp" alt="">
-            <img class="warning_block_right_two js-mousemove" data-layer="10" src="img/warning/cloud.webp" alt="">
-            <img class="warning_block_right_three js-mousemove" data-layer="1" src="img/warning/znak.webp" alt="">
-          </div>
-        </div>
+        <div class="single_content_block"></div>
       </div>
     </section>
 
